# numberoftheday

./: Cargo.toml  README.md
src/: main.rs
src/_date/: mod.rs
src/notd/: mod.rs  rand.rs
src/ui/: mod.rs  ui.css
