[package]
name = "number_of_the_day"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12"] }
